--- a/sunshinewatchface/build.gradle
+++ b/sunshinewatchface/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "xyz.kushal.sunshinewatchface"
+        applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
